--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0.68"
-# dotenv = "0.15.0"
+dotenv = "0.15.0"
